fixed desktop alignment

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -192,7 +192,7 @@
     flex-direction: row;
     gap: 0px;
     padding: 0 64px;
-    margin: 0;
+    margin: 0 auto;
     max-width: 1280px;
     width: 100%;
   }
